UPDATE: Archivo CMake actualiado para incluir las carpetas nuevas que se crearon.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,19 +3,21 @@ project(Cpp_Test)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(Cpp_Test main.cpp
-        Empresa.cpp
-        Empresa.h
-        RUT.cpp
-        RUT.h
-        Patente.cpp
-        Patente.h
-        Fecha.cpp
-        Fecha.h
-        Funciones.h
-        Funciones.cpp
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
+
+add_executable(Cpp_Test src/main.cpp
+        src/Empresa.cpp
+        include/Empresa.h
+        src/RUT.cpp
+        include/RUT.h
+        src/Patente.cpp
+        include/Patente.h
+        src/Fecha.cpp
+        include/Fecha.h
+        include/Funciones.h
+        src/Funciones.cpp
         patentesComerciales.txt
-        Heap.h  # Agrega el archivo aquí
+        include/Heap.h
 )
 
 # Copiar el archivo patentesComerciales.txt al directorio de compilación
